Update to match viz.natcap  w/ viewerTemplate

--- a/caracol/html/about.html
+++ b/caracol/html/about.html
@@ -41,7 +41,7 @@ Landuse scenarios and co-development: (...)<br>-->
 Click on the checkboxes on the panel on the right to turn data layers on and off. If you click on some of the icons you can learn more information about the data. You can also press the data download button for links to be able to access files displayed. For more information click on the 'Start Tutorial' button at the top of this panel. 
 <img class = "image" src="img/stakeholdersAbout.png" width= 100%>
 <h3>Documents</h3>
-<a href="data/dataInfoDocuments/renewablesOnePager.pdf">Analysis of Renewable Rnergy Potential</a>
+<a href="data/dataInfoDocuments/renewablesOnePager.pdf">Analysis of Renewable Energy Potential</a>
 <br>
 <a href="data/dataInfoDocuments/interimReportOctober2019.pdf">Interim Report October 2019</a>
 <br>
