--- a/caracol/html/legend.html
+++ b/caracol/html/legend.html
@@ -22,7 +22,7 @@
 		<div><img src="img/bed.png" alt="Interactive Legend for all Tourism" height="20" width="20"> Tourism Lodging</div>
 	</div>
 	<div class="close" id="tourismExpansionIL">
-		<div><img src="img/pin.png" alt="Interactive Legend for Tourism Expansion" height="20" width="20"> Tourism Impact</div>
+		<div><img src="img/pin.png" alt="Interactive Legend for Tourism Expansion" height="20" width="20"> Impacts of Site Development </div>
 	</div>
 	<div class="close" id="allMiningIL">
 		<div><img src="img/placeholdersmall.png" alt="Interactive Legend for all Mining Sites" height="20" width="20"> Mining</div>
@@ -78,13 +78,13 @@
 	</div>
 	<div class="close" id="potentialEnergyIL">
 		<div><img src="img/solar-panel.png" alt="Interactive Legend for all potential energy sites" height="20" width="20">  Best Sites for Solar Energy</div>
-		<div><img src="img/solar-panel-2.png" alt="Interactive Legend for all potential energy sites" height="20" width="20"> Good Sites for Solar Enegy</div>
+		<div><img src="img/solar-panel-2.png" alt="Interactive Legend for all potential energy sites" height="20" width="20"> Good Sites for Solar Energy</div>
 		<div><img src="img/wind.png" alt="Interactive Legend for all potential energy sites" height="20" width="20"> Best Sites for Windmills</div>
 		<div><img src="img/wind-2.png" alt="Interactive Legend for all potential energy sites" height="20" width="20"> Good Sites for Windmills</div>
 	</div>
-	<!--<div class="close" id="watershedsIL">
-		<div><img src="img/LegendIcons.png" alt="Interactive Legend for Water Features"height="20" width="20"> Waterways </div>
-	</div>-->
+	<div class="close" id="communityWaterIL">
+		<div><img src="img/water.png" alt="Interactive Legend for Community Water Withdrawal"height="20" width="20"> Community Water Withdrawal </div>
+	</div>
 	<div class="close" id="CMCCAreasIL">
 		<div><img src="img/cmccRegionLegend.png" alt="Interactive Legend for CMCC Areas" height="20" width="20"> Protected Areas</div>
 	</div>
