--- a/pro-agua/html/navbar.html
+++ b/pro-agua/html/navbar.html
@@ -10,7 +10,7 @@
       <i class='fa fa-home'></i></a>
 
     <div class="dropdown bg-black pa3">
-      Diagnóstico hídrico
+      Diagnóstico hidrológicos
       <div class="dropdown-content bg-black white pa3">    
       <a href="hidricoPEM.html" class="link white hover-bg-dark-gray bg-black pb2 db navbarLink">
         Región de Puerto Maldonado 
@@ -33,11 +33,11 @@
       </a>
       <!-- Below: Will be floodPEM.html --> 
       <a href="floodPEM.html" class="link white hover-bg-dark-gray bg-black pb2 db navbarLink">
-        Madre de Dios cuenca
+        Área de Enfoque Madre de Dios
       </a>
       <!-- Below: Will be floodTAH.html --> 
       <a href="floodTAH.html" class="link white hover-bg-dark-gray bg-black pb2 db navbarLink">
-        Acre-Purus cuenca
+        Área de Enfoque Acre-Purus
       </a>
       <a href="futuroResultados.html" class="link white hover-bg-dark-gray bg-black pb2 db navbarLink">
         Descargar Resultados 
@@ -76,7 +76,7 @@
 
     <div class="dropdown bg-black pa3">
       <a href="masRecursos.html" class="link white  bg-black pb2 db navbarLink">
-      Más recursos </a>
+      Más recursos </a> 
 
     </div>
 
