--- a/pro-agua/html/tab_method.html
+++ b/pro-agua/html/tab_method.html
@@ -1,7 +1,9 @@
-<!-- to embed : 
-	<div w3-include-html="html/tab_method.html"></div>
--->
-
+<h5>Método</h5>
+<p>La presente investigación se realizó en cuatro etapas. Primero se identificaron los riesgos y amenazas a la existencia de las fuentes de agua, en la zona de estudio. Luego los datos obtenidos fueron compilados según el uso de suelo, la topografía, el clima y los usos del agua. Con esta información se procedió a definir los escenarios potenciales a futuro en dos zonas específicas; para finalmente, realizar el análisis y compilación del índice de servicios hidrológicos.</p>
+<p>La primera etapa identificó las amenazas a la sostenibilidad de las fuentes de agua en la zona de estudio. En Perú, la principal actividad que pone en riesgo la cantidad y calidad de agua es la minería ilegal de oro en expansión, que destruye bosques primarios, contaminando con mercurio el aire, el agua y los pescados que consumen las poblaciones. En tanto la ganadería se ha constituido en la principal amenaza al bosque amazónico tanto en Brasil como en Bolivia.</p>
+<p>Estos constantes cambios y la degradación de los sistemas de apoyo natural están causando serios problemas a las ciudades en crecimiento en el ámbito MAP. En colaboración con actores y expertos de Puerto Maldonado, Iñapari y de poblados adyacentes, se identificaron, como impacto de la expansión minera, el incremento de la carga de sedimentos en los ríos, así como las variaciones extremas en el flujo. Ello determina estaciones extremas de sequía o de inundaciones. Estas interrupciones en el ciclo hidrológico causan problemas a las personas en las comunidades de Puerto Maldonado, Mazuko, Iñapari, Cobija y en muchas otras; así como a las personas que viven en zonas rurales, fuera de los centros poblados, que a menudo dependen de pozos poco profundos para abastecerse de agua.
+</p>
+<!--
 <p>
 	<a href='https://naturalcapitalproject.stanford.edu/invest/' target='_blank'>InVEST</a> es un conjunto de modelos de software de código abierto que se utilizan para mapear y valorar los bienes y servicios de la naturaleza que sustentan y satisfacen la vida humana.
 </p>
@@ -26,6 +28,8 @@
 <div>
 <p><a href='https://docs.google.com/document/d/1zCunHsRvfcg6uurF3PoLlSgqjG4zP4Vta3AEVqWW8FI/edit?usp=sharing' target='_blank'>Metodologías de procesamiento de datos y los hypotesis (equipo SIG Pro Agua)</a></p>
 </div>
+-->
+
 
 <h4> Servicios Ecosistémicos </h4>
 <div w3-include-html="html/tab_servicios.html"></div>
