--- a/caracol/html/legend.html
+++ b/caracol/html/legend.html
@@ -49,7 +49,8 @@
 		<div><img src="img/currentAgriculture.png" alt="Interactive Legend for all Agriculture" height="20" width="20"> Agriculture</div>
 	</div>
 	<div class="close" id="currentAgricultureIL">
-		<div><img src="img/currentAgriculture.png" alt="Interactive Legend for current Agriculture Zones" height="20" width="20"> Current Agriculture Areas</div>
+		<div><img src="img/currentAgriculture.png" alt="Interactive Legend for current Agriculture Zones" height="20" width="20"> Legal Agriculture Areas</div>
+		<div><img src="img/illegalAgLegend.png" alt="Interactive Legend for current Agriculture Zones" height="20" width="20"> Illegal Agriculture Areas</div>
 	</div>
 	<div class="close" id="agExpansionIL">
 		<div><img src="img/agricultureExpansion.png" alt="Interactive Legend for agriculture expansion " height="20" width="20"> Agriculture Expansion</div>
@@ -85,6 +86,9 @@
 	<div class="close" id="communityWaterIL">
 		<div><img src="img/water.png" alt="Interactive Legend for Community Water Withdrawal"height="20" width="20"> Community Water Withdrawal </div>
 	</div>
+	<div class="close" id="belmopanWatershedIL">
+		<div><img src="img/belmopanWatershedLegend.png" alt="Interactive Legend for Community Water Withdrawal"height="20" width="20"> Belmopan Watershed </div>
+	</div>
 	<div class="close" id="CMCCAreasIL">
 		<div><img src="img/cmccRegionLegend.png" alt="Interactive Legend for CMCC Areas" height="20" width="20"> Protected Areas</div>
 	</div>
@@ -92,6 +96,23 @@
 		<div><img src="img/home-run.png" alt="Interactive Legend for CMCC Communities" height="20" width="20"> CMCC Communities</div>
 	</div>-->
 	<div class="close" id="roadsIL">
-		<div><img src="img/roadLegend.png" alt="Interactive Legend for Roads in Reagion" height="20" width="20"> Roads</div>
+		<div><img src="img/roadLegend.png" alt="Interactive Legend for Roads in Reagion" height="30" width="20"> Primary Roads</div>
+	</div>
+
+	<div class="close" id="secondaryRoadsIL">
+		<div><img src="img/roadLegend.png" alt="Interactive Legend for Roads in Reagion" height="15" width="20"> Secondary Roads</div>
+	</div>
+
+	<div class="close" id="lulcMapIL">
+		<div><img src="img/lulcLegend/lulcAgricultureLegend.png" alt="Interactive Legend for all potential energy sites" height="20" width="20">  Agriculture</div>
+		<div><img src="img/lulcLegend/lulcDevelopedLegend.png" alt="Interactive Legend for all potential energy sites" height="20" width="20"> Developed</div>
+		<div><img src="img/lulcLegend/lulcForestBroadleafLegend.png" alt="Interactive Legend for all potential energy sites" height="20" width="20"> Forest - broad - leaved</div>
+		<div><img src="img/lulcLegend/lulcForestPineLegend.png" alt="Interactive Legend for all potential energy sites" height="20" width="20"> Forest - pine</div>
+		<div><img src="img/lulcLegend/lulcPastureLegend.png" alt="Interactive Legend for all potential energy sites" height="20" width="20"> Pasture</div>
+		<div><img src="img/lulcLegend/lulcPlantationLegend.png" alt="Interactive Legend for all potential energy sites" height="20" width="20"> Plantation</div>
+		<div><img src="img/lulcLegend/lulcRoadsLegend.png" alt="Interactive Legend for all potential energy sites" height="20" width="20"> Road</div>
+		<div><img src="img/lulcLegend/lulcShrublandLegend.png" alt="Interactive Legend for all potential energy sites" height="20" width="20"> Shrubland</div>
+		<div><img src="img/lulcLegend/lulcUnvegetatedLegend.png" alt="Interactive Legend for all potential energy sites" height="20" width="20"> Unvegetated</div>
+		<div><img src="img/lulcLegend/lulcWaterLegend.png" alt="Interactive Legend for all potential energy sites" height="20" width="20"> Water</div>
 	</div>
 
