--- a/caracol/index.html
+++ b/caracol/index.html
@@ -67,9 +67,12 @@
 	<div class="layerChecks" id="CMCCCommunities"><input type = "checkbox" id="CMCCCommunitiesCheckBox"> CMCC Communities <a class="dataLinkClose" href="https://drive.google.com/file/d/1zF_AgOAO6xVEH-0tQYDyy7sh5h5fcMrP/view?usp=sharing" target="_blank"> download</a></div>
 	<div class="layerChecks" id="watersheds"><input type = "checkbox" id="watershedsCheckBox"> Waterways <a class="dataLinkClose" href="https://drive.google.com/file/d/1rtmFK1iMqntzRj3pXvpggB8Gpg5jIs_M/view?usp=sharing" target="_blank"> download</a></div>
 	<div class="layerChecks" id="CMCCAreas"><input type = "checkbox" id="CMCCAreasCheckBox"> Protected Areas <a class="dataLinkClose" href="https://drive.google.com/file/d/1gVqUt-YqC8xwK4uVnaDOTh7FKT4nedod/view?usp=sharing" target="_blank"> download</a></div>
-	<div class="layerChecks" id="Roads"><input type = "checkbox" id="roadsCheckBox"> Roads <a class="dataLinkClose" href="https://drive.google.com/file/d/1Qc4mFB_7cXng83i8Oya3-wc7fGaAJ6OD/view?usp=sharing" target="_blank"> download</a></div>
+	<div class="layerChecks" id="Roads"><input type = "checkbox" id="roadsCheckBox"> Primary Roads <a class="dataLinkClose" href="https://drive.google.com/file/d/1HZOGGLxJz9baa4-gb4O1PLpoMwN0Uwaz/view?usp=sharing" target="_blank"> download</a></div>
+	<div class="layerChecks" id="secondaryRoads"><input type = "checkbox" id="secondaryRoadsCheckBox"> Secondary Roads <a class="dataLinkClose" href="https://drive.google.com/file/d/1jBeV9GIXlg7B26Gt7DnKeUjgIzP0VkSP/view?usp=sharing" target="_blank"> download</a></div>
 	<div class="layerChecks" id="tourismArchKey"><input type = "checkbox" id="tourismArchKeyCheckBox"> Natural & Cultural Sites <a class="dataLinkClose" href="https://drive.google.com/file/d/1yxUVKX0yi5IS0tgyWGXfxGmoGBmZFKhv/view?usp=sharing" target="_blank"> download</a></div>
 	<div class="layerChecks" id="communityWater"><input type = "checkbox" id="communityWaterCheckBox"> Community Water Withdrawal <a class="dataLinkClose" href="https://drive.google.com/file/d/1lyT1YpNq6kqiWqIYb8bu87P4dkuhm7gP/view?usp=sharing" target="_blank"> download</a></div>
+	<div class="layerChecks" id="belmopanWatershed"><input type = "checkbox" id="belmopanWatershedCheckBox"> Belmopan Watershed <a class="dataLinkClose" href="https://drive.google.com/file/d/1_2k0nHXyo_sw3Pf8FlYrK_4QAphDdAlK/view?usp=sharing" target="_blank">  download</a></div>
+	<div class="layerChecks" id="lulcMap"><input type = "checkbox" id="lulcMapCheckBox"> Land Cover <a class="dataLinkClose" href="https://drive.google.com/file/d/1s4pCro7HkSvGFieyVnUNCU-9gVyosFXt/view?usp=sharing" target="_blank">  download</a></div> 
 
 	<hr>
 	<!--Economic Activities -->
@@ -79,8 +82,8 @@
 	<div class="layerChecks" id="timber"><input type = "checkbox" id="timberCheckBox"> Timber Concessions <a class="dataLinkClose" href="https://drive.google.com/file/d/1SGX6uAcox2ydOjdlYxaXi6k6SJtEALjs/view?usp=sharing" target="_blank">   download</a></div>
 	<div class="layerChecks" id="hotelLodging"><input type = "checkbox" id="hotelLodgingCheckBox"> Tourism Lodging <a class="dataLinkClose" href="https://drive.google.com/file/d/1U_iePO5JiWPEaxoCWG7jla20mAYh0dRg/view?usp=sharing" target="_blank">  download</a></div>
 	<br>
-	<!-- Ecosystem Services -->
-	<div class="layerChecks layerTitle" id="allMining"> Ecosystem Services </div>
+	<!-- Current Ecosystem Services -->
+	<div class="layerChecks layerTitle" id="allMining"> Current Ecosystem Services </div>
 	<div class="layerChecks" id="impactHeatmap"><input type = "checkbox" id="waterflowCheckBox"> Total Water Flow <a class="dataLinkClose" href="https://drive.google.com/file/d/19W5e26ha553kmJNur4DIz8X9k3kFPZ8T/view?usp=sharing" target="_blank">   download</a></div>
 	<div class="layerChecks" id="impactHeatmap"><input type = "checkbox" id="waterQualityCheckBox"> Water Quality Index <a class="dataLinkClose" href="https://drive.google.com/file/d/1R5mcwVg4qqGdJS6JtLzTXWIjHCHBJlz5/view?usp=sharing" target="_blank">   download</a></div>
 	<div class="layerChecks" id="impactHeatmap"><input type = "checkbox" id="carbonStorageCheckBox"> Carbon Storage <a class="dataLinkClose" href="https://drive.google.com/file/d/1Esuhr6QMac3p2cVE-7TGVRNVDuIk62s4/view?usp=sharing" target="_blank">   download</a></div>
