added doc to maintain viz gallery

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 
   <!-- Header -->
   <header id="portfolio">
+    <div style="background-color: black; width: 100%; color: white; padding: 7px; text-align: center;">We’re moving! Now at <a href="http://viz.naturalcapitalproject.stanford.edu" target='_blank'>viz.naturalcapitalproject.stanford.edu</a></div>
     <span class="w3-button w3-hide-large w3-xxlarge w3-hover-text-grey" onclick="w3_open()"><i class="fa fa-bars"></i></span>
     <div class="w3-container">
     <h1><b>Natural Capital Data Viz</b></h1>
