--- a/pro-agua/about.html
+++ b/pro-agua/about.html
@@ -125,7 +125,7 @@
 			<div class="w3-col s4 w3-center">
 				<img src="static/photos/mg.jpg" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
 				<h5>Marcelo Guevara</h5>
-				<div class="center w3-text-grey"><i>Coordinator Latin America</i></div>
+				<div class="center w3-text-grey"><i>Investigador en Ordenamiento Territorial y Conservacion para Latinoamérica</i></div>
 			</div>
 		
 			<div class="w3-col s4 w3-center">
