Redirect links to  viz stanford

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     </div>
 
     <div class="w3-third w3-container">
-      <a href='http://viz.naturalcapitalproject.org/ipbes/' target='_blank'><img src="images/natureforpeople.png" alt="Image" style="width:100%" class="w3-hover-opacity"></a>
+      <a href='http://viz.naturalcapitalproject.stanford.edu/ipbes/' target='_blank'><img src="images/natureforpeople.png" alt="Image" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b>Nature's Contributions to People, worldwide</b></p>
         <p>As part of UN's <a href='https://www.ipbes.net/' target='_blank'>IPBES</a> Global Assessment,  we mapped key ecosystem services worldwide at a fine resolution, under future scenarios (Chaplin-Kramer, in press). Where does nature contributes to people the most today, and where will people be most at risk in the future? This interactive viewer helps to explore these dense maps and facilitates comparisons across different regions, services, scenarios. Informing science-based policies, with the right maps in the right hands!
@@ -93,7 +93,7 @@
 
 
     <div class="w3-third w3-container w3-margin-bottom">
-      <a href='http://viz.naturalcapitalproject.org/pro-agua/' target='_blank'><img src="images/proagua.png" alt="Image" style="width:100%" class="w3-hover-opacity"></a>
+      <a href='http://viz.naturalcapitalproject.stanford.edu/pro-agua/' target='_blank'><img src="images/proagua.png" alt="Image" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b>Natural Resilience in the Amazon</b></p>
         <p>The PRO Agua project (<i>Proyecto Resiliencia y Ordenamiento Territorial del Agua</i>) takes place in the tri-national area where Bolivia, Brazil and Peru meet and where watersheds are affected by floods, and pollution from illegal mining.  This collaborative endeavour ambitions to  demonstrate the benefits of ecosystem services and integrated watershed management for the health and well-being of the growing population.
@@ -116,7 +116,7 @@
 
 
     <div class="w3-third w3-container">
-      <a href='http://viz.naturalcapitalproject.org/GreenGrowthBook' target='_blank'><img src="images/gg.png" alt="Image" style="width:100%" class="w3-hover-opacity"></a>
+      <a href='http://viz.naturalcapitalproject.stanford.edu/GreenGrowthBook' target='_blank'><img src="images/gg.png" alt="Image" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b>Green Growth That Works</b></p>
         <p>This book provides detailed examples of Natural Capital Policy and Finance Mechanisms around the World.
@@ -171,7 +171,7 @@
   <!-- Fourth Examples Row -->
   <div class="w3-row-padding">
     <div class="w3-third w3-container w3-margin-bottom">
-      <a href='http://viz.naturalcapitalproject.org/rangelands' target='_blank'><img src="images/rangelands.png" alt="Image" style="width:100%" class="w3-hover-opacity"></a>
+      <a href='http://viz.naturalcapitalproject.stanford.edu/rangelands' target='_blank'><img src="images/rangelands.png" alt="Image" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b>NatCap's Rangelands model</b></p>
         <p>The Rangelands Dashboards displays sample outputs of NatCap’s Rangeland Production Model, in the Gobi desert, Mongolia.
@@ -541,11 +541,11 @@ By Gregg + Center of Oceans Solutions
         <p>Requires only basic coding understanding, and a github account.</p>
         <p>{This viewer is in Beta Version}</p>
 
-        <a href='http://viz.naturalcapitalproject.org/viewerTemplate/' target='_blank'>
+        <a href='http://viz.naturalcapitalproject.stanford.edu/viewerTemplate/' target='_blank'>
           <img src="images/viewerTemp.png" alt="Image" style="width:100%" class="w3-hover-opacity">
         </a>
         
-        <button class="w3-button w3-third w3-black w3-padding-large w3-margin"><a href='http://viz.naturalcapitalproject.org/viewerTemplate/' target='_blank'>
+        <button class="w3-button w3-third w3-black w3-padding-large w3-margin"><a href='http://viz.naturalcapitalproject.stanford.edu/viewerTemplate/' target='_blank'>
           <i class="fa fa-tv w3-margin-right"></i>See Demo</a>
         </button>
         <button class="w3-button w3-third w3-black w3-padding-large w3-margin"><a href='https://github.com/charlottegiseleweil/viewerTemplate' target='_blank'>
