added Caracol in Viz Gallery

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
   <!-- Header -->
   <header id="portfolio">
-    <div style="background-color: black; width: 100%; color: white; padding: 7px; text-align: center;">We’re moving! Now at <a href="http://viz.naturalcapitalproject.stanford.edu" target='_blank'>viz.naturalcapitalproject.stanford.edu</a></div>
+
     <span class="w3-button w3-hide-large w3-xxlarge w3-hover-text-grey" onclick="w3_open()"><i class="fa fa-bars"></i></span>
     <div class="w3-container">
     <h1><b>Natural Capital Data Viz</b></h1>
@@ -268,8 +268,11 @@
     </div>
   </div>
 
+
+
   <!-- Fifth Examples Row -->
   <div class="w3-row-padding">
+
     <div class="w3-third w3-container w3-margin-bottom filterDiv natcaps webmaps">
       <a href='http://cons.scienceontheweb.net/belize/' target='_blank'><img src="images/belize1.png" alt="Image" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
@@ -281,25 +284,28 @@
     </div>
 
     <div class="w3-third w3-container w3-margin-bottom filterDiv natcaps webmaps">
-      <a href='https://app.beescape.org/' target='_blank'><img src="images/beescape.png" alt="Image" style="width:100%" class="w3-hover-opacity"></a>
+      <a href='http://viz.naturalcapitalproject.stanford.edu/caracol/' target='_blank'><img src="images/caracol.png" alt="Image" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
-        <p><b>Beescape</b></p>
-        <p>Get a bee's eye view of your landscape - This tool will help you understand how the landscape surrounding managed honey bee hives placed in an apiary, garden, or farm stacks up in terms of floral resources bees can find, the insecticides they encounter, and for wild bees, the nesting sites that are available. 
-        <span class="light"> Work led by Eric Lonsdorf.  </span>
-        </p>
+        <p><b>Sustainable Development in Caracol, Belize</b></p>
+        <p>In the Caracol-Chiquibul-Mountain Pine Ridge (CMCC) region of Belize, improvement of the road to Caracol are expected, with potential benefits and concerns. Proactive planning had led to conduct state-of-the-art ecosystem services mapping and analysis.
+          <span class="light"> By NatCap CMCC Team </span>
+      </p>
       </div>
     </div>
 
-    <div class="w3-third w3-container filterDiv webmaps">
-      <a href='http://www.pollinationmapper.org/app-pollinationmapper/' target='_blank'><img src="images/poll.png" alt="Image" style="width:100%" class="w3-hover-opacity"></a>
+    <div class="w3-third w3-container w3-margin-bottom filterDiv webmaps">
+      <a href='https://dopa-explorer.jrc.ec.europa.eu/globe/1' target='_blank'><img src="images/dopaExplorer.png" alt="Image" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
-        <p><b>Pollination Mapper (Beta)</b></p>
-        <p>This interactive decision support tool to help inform grower’s choice of pollination strategies for their specialty crop farms in the US. It allows you to select your farm, try different approaches to pollination, compare and save the results. Set up a user profile to return to your session in the future and try new strategies. 
-        <span class="light"> By the Integrated Crop Pollination Project. Work led by Eric Lonsdorf, Taylor Ricketts, with software developers at Azavea.  </span>
-        </p>
+        <p><b>Digital Observatory for Protected Areas (DOPA) Explorer 4</b></p>
+        <p>Welcome to DOPA Explorer, the Joint Research Centre’s web based information system on the world's protected areas, which helps the European Commission and other users to assess the state of and the pressure on protected areas at multiple scales.
+          <span class="light"> By the Joint Research Centre of the European Commission</span>
+      </p>
       </div>
     </div>
+
   </div>
+
+
 <br>
  
 
@@ -473,13 +479,23 @@
     <!-- 11th Examples Row -->
 <div class="w3-row-padding">
 
-    <div class="w3-third w3-container w3-margin-bottom filterDiv webmaps">
-      <a href='https://dopa-explorer.jrc.ec.europa.eu/globe/1' target='_blank'><img src="images/dopaExplorer.png" alt="Image" style="width:100%" class="w3-hover-opacity"></a>
+    <div class="w3-third w3-container w3-margin-bottom filterDiv natcaps webmaps">
+      <a href='https://app.beescape.org/' target='_blank'><img src="images/beescape.png" alt="Image" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
-        <p><b>Digital Observatory for Protected Areas (DOPA) Explorer 4</b></p>
-        <p>Welcome to DOPA Explorer, the Joint Research Centre’s web based information system on the world's protected areas, which helps the European Commission and other users to assess the state of and the pressure on protected areas at multiple scales.
-          <span class="light"> By the Joint Research Centre of the European Commission</span>
-      </p>
+        <p><b>Beescape</b></p>
+        <p>Get a bee's eye view of your landscape - This tool will help you understand how the landscape surrounding managed honey bee hives placed in an apiary, garden, or farm stacks up in terms of floral resources bees can find, the insecticides they encounter, and for wild bees, the nesting sites that are available. 
+        <span class="light"> Work led by Eric Lonsdorf.  </span>
+        </p>
+      </div>
+    </div>
+
+    <div class="w3-third w3-container filterDiv webmaps">
+      <a href='http://www.pollinationmapper.org/app-pollinationmapper/' target='_blank'><img src="images/poll.png" alt="Image" style="width:100%" class="w3-hover-opacity"></a>
+      <div class="w3-container w3-white">
+        <p><b>Pollination Mapper (Beta)</b></p>
+        <p>This interactive decision support tool to help inform grower’s choice of pollination strategies for their specialty crop farms in the US. It allows you to select your farm, try different approaches to pollination, compare and save the results. Set up a user profile to return to your session in the future and try new strategies. 
+        <span class="light"> By the Integrated Crop Pollination Project. Work led by Eric Lonsdorf, Taylor Ricketts, with software developers at Azavea.  </span>
+        </p>
       </div>
     </div>
 
