CARACOL google form looks better

--- a/caracol/index.html
+++ b/caracol/index.html
@@ -225,7 +225,7 @@
 	<button type= "button" class="button" style="display: inline;" id="next1Button">Next</button>
 
 	<!-- Google Form for detailed Analytics -->
-	<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfpLkfgLFXc59aiZpRqQizh2cQpMd_e04w98nkMNocZYWK_Ow/viewform?embedded=true" width="640" height="531" frameborder="0" marginheight="0" marginwidth="0">Analytics loading…</iframe>
+	<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfpLkfgLFXc59aiZpRqQizh2cQpMd_e04w98nkMNocZYWK_Ow/viewform?embedded=true" width="90%" height="531" frameborder="0" marginheight="0" marginwidth="0">Analytics loading…</iframe>
 	<!-- End form -->
 
 </div>
