Caracol: Fixed bug with finalScenario img

--- a/caracol/index.html
+++ b/caracol/index.html
@@ -150,7 +150,7 @@
 
 	<h2>Sustainable Development Plan Activities</h2>
 
-	<img src="img/FinalScenario.png" id= "staticFigure" width= 100%>
+	<img src="img/finalScenario.png" id= "staticFigure" width= 100%>
 
 	<br><br><br>
 
