Added Gobi in Viz Gallery

--- a/index.html
+++ b/index.html
@@ -476,7 +476,8 @@
 
 
   </div>
-    <!-- 11th Examples Row -->
+
+<!-- 11th Examples Row -->
 <div class="w3-row-padding">
 
     <div class="w3-third w3-container w3-margin-bottom filterDiv natcaps webmaps">
@@ -505,6 +506,23 @@
         <p><b>Your favorite visualization</b></p>
         <p> Email us @ <a href='mailto:chweil@stanford.edu'>chweil@stanford.edu</a> to have your project featured!
         <span class="light"> By you</span>
+        </p>
+      </div>
+    </div>
+
+
+  </div>
+
+<!-- 12th Examples Row -->
+<div class="w3-row-padding">
+
+    <div class="w3-third w3-container w3-margin-bottom filterDiv natcaps webmaps">
+      <a href='viz.naturalcapitalproject.stanford.edu/gobiTraining' target='_blank'><img src="images/gobi.png" alt="Image" style="width:100%" class="w3-hover-opacity"></a>
+      <div class="w3-container w3-white">
+        <p><b>Gobi Training Viewer</b></p>
+        <p>Bringing Natural Capital Knowledge to Mongolia’s Gobi Steppe
+This four-day virtual event will introduce participants to the Natural Capital Approach and give teams of participants hands-on experience with three ecosystem services models. 
+        <span class="light"> By NatCap </span>
         </p>
       </div>
     </div>
