Added New contacts

--- a/index.html
+++ b/index.html
@@ -639,10 +639,17 @@ By Gregg + Center of Oceans Solutions
 
 <div class="w3-container w3-padding-large" style="margin-bottom:32px" ><h2 id='contact'> Contact</h2>
     <div class="w3-quarter">
-          <h4>Charlotte Weil 
-                <a class="fa fa-envelope w3-xlarge" href="mailto:weilcharlotte@gmail.com"></a>
+          <h4>Jesse Goldstein 
+                <a class="fa fa-envelope w3-xlarge" href="mailto:jgldstn@stanford.edu"></a>
               </h4>
-          <p>Researcher Data Scientist,
+          <p>GIS Analyst, 
+          The Natural Capital Project at Stanford University</p>
+    </div>
+    <div class="w3-quarter">
+          <h4>Stacie Wolny 
+                <a class="fa fa-envelope w3-xlarge" href="mailto:swolny@stanford.edu"></a>
+              </h4>
+          <p>GIS Analyst, 
           The Natural Capital Project at Stanford University</p>
 
 
