added git cheatsheet in readme

--- a/index.html
+++ b/index.html
@@ -637,20 +637,27 @@ By Gregg + Center of Oceans Solutions
 
 
 
-<div class="w3-container w3-padding-large" style="margin-bottom:32px" ><h2 id='contact'> Contact</h2>
-    <div class="w3-quarter">
+<div class="w3-container w3-padding-large" style="margin-bottom:32px" ><h2 id='contact'> Contacts</h2>
+    <div class="w3-third">
           <h4>Jesse Goldstein 
                 <a class="fa fa-envelope w3-xlarge" href="mailto:jgldstn@stanford.edu"></a>
               </h4>
-          <p>GIS Analyst, 
-          The Natural Capital Project at Stanford University</p>
+          <p>Ask me about: Adding your viewer here!</p>
+          <p>GIS Analyst, NatCap</p>
     </div>
-    <div class="w3-quarter">
+    <div class="w3-third">
+          <h4>Charlie Weil
+                <a class="fa fa-envelope w3-xlarge" href="mailto:chweil@stanford.edu"></a>
+              </h4>
+          <p>Ask me about: ViewerTemplate</p>
+            <p>Data Scientist, formerly NatCap</p>
+    </div>
+    <div class="w3-third">
           <h4>Stacie Wolny 
                 <a class="fa fa-envelope w3-xlarge" href="mailto:swolny@stanford.edu"></a>
               </h4>
-          <p>GIS Analyst, 
-          The Natural Capital Project at Stanford University</p>
+          <p>Ask me about: Making great maps</p>
+          <p>GIS Analyst, NatCap</p>
 
 
 
